testsuite/bsc.names/portRenaming/invalidAttrs/port/DuplicateAttr.bsv

interface Ifc;
 method Action check ((* port="arg" *) (* port="arg" *)Bool x);
endinterface

